Added status screenshots in readme file